# REShAPE

./: LICENSE  README.md  matconvnet_patch.py  readme_centos7.txt  readme_win64.txt  reshape.def  reshape_config.py  reshape_csv.py  reshape_feature.py  reshape_version.py  reshapectl.py  reshapevis.py  setup-win64.py  setup.py  setup_icons.py
FijiProc/: REShAPE_Auto_0.0.1.ijm  REShAPE_Manual_0.08.ijm
Icons/desktop/: Fiji.desktop  REShAPE.desktop  REShAPEView.desktop  REShAPEVisualization.desktop  RsCircles.desktop
Imaging/: readme.txt
Segmentation/: ArtiMask.m  CNNsegment.m  ListDir.m  MaskedLocalResponse.m  ReadCzi.m  ReadTiff.m  WriteTiff.m  cnn.mat  options.mat  runme.sh  segmfunc.m  vl_nnfscore.m
Segmentation/+dagnn/: Fscore.m
Segmentation/matconvnet/matlab/: vl_compilenn.m
Segmentation/src/: appParams.m  bilinear_u.m  createInception.m  format_data.m  get_batch.m  initializeCNN.m  segment.m  train_cnn.m  vl_nnfscore.m
Segmentation/src/+dagnn/: L1Loss.m  L2Loss.m  LossSmoothL1.m
Segmentation/src/+solver/: adadelta.m  sgd.m
Standalone/: deviceQuery  segmentation.sh
cppsource/ReshapeImaging/: CMakeLists.txt  build.sh
cppsource/ReshapeImaging/src/: ReshapeImaging.cpp  csv.cpp  csv.h  rsGeom.cpp  rsGeom.h  rsImage.cpp  rsImage.h  rsImageReader.cpp  rsImageReader.h  rsIo.cpp  rsIo.h  rsMain.cpp  rsMain.h  rsSeparateTiles.cpp  rsSeparateTiles.h  rscsvio.cpp  rscsvio.h  rslutio.cpp  rslutio.h
cppsource/ReshapeViewer/: CMakeLists.txt
cppsource/ReshapeViewer/Icons/: qresources.qrc
cppsource/ReshapeViewer/src/: main.cxx  rsImage.cpp  rsImageView.cpp  rsImageViewQt.cpp  rsImageViewQt.h  rsImageViewVTK.cpp  rsLut.cpp  rsMainWindow.cpp  rsMainWindow.h  rsMapWidget.cpp  rsMapWidget.h  rsParticle.cpp  rscsvio.cpp  rscsvio.h  rsimage.h  rsimageview.h  rsimageviewvtk.h  rslut.h  rsparticle.h
cppsource/RsCircles/: CMakeLists.txt
cppsource/RsCircles/Icons/: qresources.qrc
cppsource/RsCircles/src/: main.cxx  rsFigure.cpp  rsFigure.h  rsImage.cpp  rsImageView.cpp  rsImageViewQt.cpp  rsImageViewQt.h  rsLut.cpp  rsMainWindow.cpp  rsMainWindow.h  rsParticle.cpp  rscircles.rc  rsdef.h  rsimage.h  rsimageview.h  rsparticle.h
matlab/: segmfunc.prj  segmfunc.prj.templ
templates/: base.R  density.R  setup.R
visual/: __init__.py  attredit.py  cellfeature.py  dialogs.py  filegroup.py  listentry.py  listselect.py  plotmgr.py  templatemgr.py
